# PlatformerSaves

./: CMakeLists.txt  README.md  about.md  changelog.md  mod.json  support.md
.github/workflows/: multi-platform.yml
docs/: PSF.hexpat
src/: main.cpp
src/domain/: CheckpointGameObjectReference.cpp  CheckpointGameObjectReference.hpp
src/hooks/: CheckpointObject.cpp  CheckpointObject.hpp  EditLevelLayer.cpp  EditLevelLayer.hpp  EndLevelLayer.cpp  EndLevelLayer.hpp  FMODAudioEngine.cpp  FMODAudioEngine.hpp  GJBaseGameLayer.cpp  GJBaseGameLayer.hpp  LevelAreaInnerLayer.cpp  LevelAreaInnerLayer.hpp  LevelInfoLayer.cpp  LevelInfoLayer.hpp  PauseLayer.cpp  PauseLayer.hpp  PlayLayer.cpp  PlayLayer.hpp  PlayLayerLoad.cpp  PlayLayerSave.cpp
src/hooks/cocos2d/: CCDirector.cpp  CCDirector.hpp  CCKeyboardDispatcher.cpp  CCKeyboardDispatcher.hpp
src/ui/: PlayLevelMenuPopup.cpp  PlayLevelMenuPopup.hpp
src/util/: algorithm.hpp  debug.cpp  debug.hpp  filesystem.hpp  platform.hpp
